--- a/styles.css
+++ b/styles.css
@@ -32,14 +32,18 @@ nav {
  
 .active {
    background-color: black;
-   float: left;
-   height: 100%;
-   width: 33.33%;
-   justify-content: center;
-   text-align: center;
-   border-radius: 20px;
-   display: flex;
-   right: 0;
-   top: 0;
 }
+
+a:link { 
+    text-decoration: none; 
+  } 
+  a:visited { 
+    text-decoration: none; 
+  } 
+  a:hover { 
+    text-decoration: none; 
+  } 
+  a:active { 
+    text-decoration: none; 
+  }
 
