--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,48 @@
     position: relative;
 }
 
+.culture-row {
+    height: 36%;
+    display: inline-flex;
+    position: absolute;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap;
+    float: left;
+    margin-top: 1%;
+    padding-bottom: 2%;
+}
+
+.row {
+    display: flex;
+    margin-bottom: 22%;
+}
+
+.culture-title{
+margin-top: 5%;
+display: block;
+position: relative;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    position: relative;
+    justify-content: center;
+    text-align: center;
+    border-radius: 20px;
+    display: block;
+    margin-right: 2%;
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+
 nav {
     display: block;
     width: 60%;
@@ -20,7 +62,6 @@ nav {
    float: left;
    height: 100%;
    width: 33.33%;
-   background-color: grey;
    justify-content: center;
    text-align: center;
    border-radius: 20px;
@@ -32,6 +73,14 @@ nav {
  
 .active {
    background-color: black;
+}
+
+a{
+    font-family:Verdana; 
+    color:White; 
+    font-size: 20px; 
+    display:inline; 
+    padding: 4%;
 }
 
 a:link { 
