--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,104 @@
+html {
+  background: #FFFAED;
+}
+
 
 .topnav-centered {
-    width: 100%;
-    background-color: grey;
-    border-radius: 20px;
-    display: table;
-    clear: both;
-    overflow: hidden;
-    position: relative;
+  width: 100%;
+  background-color: grey;
+  border-radius: 20px;
+  display: table;
+  clear: both;
+  overflow: hidden;
+  position: relative;
 }
 
 .culture-row {
-    height: 36%;
-    display: inline-flex;
-    position: absolute;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
-    float: left;
-    margin-top: 1%;
-    padding-bottom: 2%;
+  height: 36%;
+  display: inline-flex;
+  position: absolute;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  float: left;
+  margin-top: 1%;
+  padding-bottom: 2%;
 }
 
 .row {
-    display: flex;
-    margin-bottom: 22%;
+  display: flex;
+  margin-bottom: 22%;
 }
 
-.culture-title{
-margin-top: 5%;
-display: block;
-position: relative;
+.culture-title {
+  margin-top: 5%;
+  display: block;
+  position: relative;
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    border-radius: 20px;
-    display: block;
-    margin-right: 2%;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  position: relative;
+  justify-content: center;
+  text-align: center;
+  border-radius: 20px;
+  display: block;
+  margin-right: 2%;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 
 nav {
-    display: block;
-    width: 60%;
-    margin: 0 auto;
-    
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+
 }
 
 .column {
-   float: left;
-   height: 100%;
-   width: 33.33%;
-   justify-content: center;
-   text-align: center;
-   border-radius: 20px;
-   display: flex;
-   right: 0;
-   top: 0;
+  float: left;
+  height: 100%;
+  width: 33.33%;
+  justify-content: center;
+  text-align: center;
+  border-radius: 20px;
+  display: flex;
+  right: 0;
+  top: 0;
 }
 
- 
+
 .active {
-   background-color: black;
+  background-color: black;
 }
 
-a{
-    font-family:Verdana; 
-    color:White; 
-    font-size: 20px; 
-    display:inline; 
-    padding: 4%;
+a {
+  font-family: Verdana;
+  color: White;
+  font-size: 20px;
+  display: inline;
+  padding: 4%;
 }
 
-a:link { 
-    text-decoration: none; 
-  } 
-  a:visited { 
-    text-decoration: none; 
-  } 
-  a:hover { 
-    text-decoration: none; 
-  } 
-  a:active { 
-    text-decoration: none; 
-  }
+a:link {
+  text-decoration: none;
+}
 
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
